Small fixes, container width too small for #blurb h2, and non-main footer became white.

--- a/web/app/themes/theagsc/assets/styles/layouts/_footer.less
+++ b/web/app/themes/theagsc/assets/styles/layouts/_footer.less
@@ -1,7 +1,7 @@
+foter.footer-main {background:white;}
 footer {
 	margin: 0 auto;
 	padding:70px 0;
-	background:white;
 	text-align: center;
 
 	a.footer-brand {
