--- a/web/app/themes/theagsc/assets/styles/layouts/_header_home.less
+++ b/web/app/themes/theagsc/assets/styles/layouts/_header_home.less
@@ -55,7 +55,7 @@
 			@media @sm {
 				font-size: 2.3em;
 				line-height: 42px;
-				max-width: 770px;
+				max-width: 800px;
 				padding-right:40px;
 			}
 		}
